--- a/crafted2.css
+++ b/crafted2.css
@@ -104,6 +104,7 @@ css Zen Garden submission 217 - 'Screen Filler', by Elliot Jay Stocks, http://el
 	@media screen and (min-width:1px) {
 
 		body 				{ font-size:85%; }
+		code				{ font-size:1em; }
 
 	}
 
